fixed commingsoon.less not showing bgimg

--- a/css/index.css
+++ b/css/index.css
@@ -942,6 +942,10 @@ footer .container .footer-signature {
   display: flex;
   flex-direction: column;
 }
+html,
+body {
+  height: 100%;
+}
 .coming-soon {
   background-image: url('../img/comingsoon/comming-soon-bg.png');
   height: 100%;
