--- a/less/coming-soon.less
+++ b/less/coming-soon.less
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 .coming-soon {
   background-image: url('../img/comingsoon/comming-soon-bg.png');  
   height: 100%;
